Fix spacing issue with 2 text inputs in one line

--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,8 @@ label {
 #coming-soon {
     font-size: 32px;
 }
+
+.row>.col>label {
+    padding-left: calc((var(--bs-gutter-x)/ 2) + 12px);
+    padding-right: calc((var(--bs-gutter-x)/ 2) + 12px);
+}
